syntax = "proto3";

option go_package = "./msg";

package msg;

enum EnumPlayerIntAttr {
  PlayerIntAttr_None = 0;
  PlayerIntAttr_ItemId = 1;
}
enum EnumPlayerStrAttr {
  PlayerStrAttr_None = 0;
  PlayerStrAttr_ItemId = 1;
}

message DBPlayer {
  int64 RoleId = 1;
  int64 AccountId = 3;
  string Nickname = 5;
  map<int32, int64> IntAttr = 6;
  map<int32, string> StrAttr = 7;

  DBPlayerBag DBPlayerBag = 8;
}

message ItemInfo {
  int64 UniqueId = 1;
  int32 CfgItemId = 2;
  int64 Count = 3;
}

message DBPlayerBag {
  repeated ItemInfo ItemList = 1;
  // map<int64,ItemInfo> ItemList
}